syntax = "proto3";

//import  "other.proto";
//import public "other2.proto";
//import weak "other.proto";

package service1;


service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}


